# tgs_converter_service

./: .gitmodules  Makefile  generate_proto_stubs.bat  install.sh  pyproject.toml  requirements.txt
src/: bot.py  main.py  server.py
src/tgs_converter/: main.py  server.py
src/tgs_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
