[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]



[project]
name = "tgs-converter"

version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "ffmpeg-python>=0.2.0",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "pillow>=10.4.0",
    "python-telegram-bot>=21.6",
    "rlottie-python>=1.3.7",
    "wheel>=0.45.1",
]


[tool.setuptools]
packages = ["generated", "tgs_converter"]
package-dir = {"" = "src"}

[project.scripts]
tgs-converter = "tgs_converter.main:main"
